# fastapi_class

./: main.py  pyproject.toml  test_temp.py  text_example.py
.github/workflows/: ci.yml
app/: __init__.py
