[project]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = [
    {name = "iamnurih",email = "emailnuri@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (==24.10.0)",
    "ruff (==0.8.2)",
    "mypy (==1.13.0)",
    "pytest (==8.3.4)",
    "coverage (==7.6.9)",
    "pytest-asyncio (==0.25.0)"
]

[tool.black]
line-length = 120

[too.ruff]
target-version = "py313"

[tool.mypy]
plugin = ["pydantic.mypy"]
python_version = 3.13
strict =true

[tool.coverage.run]
omit = ["*/test_*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

